# mp2-lab5-mstack

./: .travis.yml  CMakeLists.txt  README.md
MultiStack/: MultiStack.h
StackLib/: Stack.h
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
test/: CMakeLists.txt  test_multiStack.cpp
